atualização de musicas e fotos

--- a/index.html
+++ b/index.html
@@ -857,7 +857,7 @@
         <h2 class="section-title">Nosso Vídeo Especial</h2>
         
         <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/2Vv-BfVoq4g?si=3V3uM0wqR5hC5h3h" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/watch?v=WkLpoUiasZ8" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
     </section>
 
@@ -869,8 +869,8 @@
             <div class="song-card">
                 <img src="https://images.unsplash.com/photo-1597848212624-a19eb35e2651?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Capa do álbum" class="song-cover">
                 <div class="song-info">
-                    <h3 class="song-title">Perfect</h3>
-                    <p class="song-artist">Ed Sheeran</p>
+                    <h3 class="song-title">Partilhar</h3>
+                    <p class="song-artist">Rubel</p>
                     <button class="play-btn"><i class="fas fa-play"></i> Ouvir</button>
                 </div>
             </div>
@@ -878,8 +878,8 @@
             <div class="song-card">
                 <img src="https://images.unsplash.com/photo-1494232410401-ad00d5433cfa?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="Capa do álbum" class="song-cover">
                 <div class="song-info">
-                    <h3 class="song-title">All of Me</h3>
-                    <p class="song-artist">John Legend</p>
+                    <h3 class="song-title">Várias Queixas</h3>
+                    <p class="song-artist">Gilsons</p>
                     <button class="play-btn"><i class="fas fa-play"></i> Ouvir</button>
                 </div>
             </div>
@@ -962,11 +962,24 @@
             // Playlist
             playlist: [
                 {
-                    title: "Perfect",
-                    artist: "Ed Sheeran",
-                    cover: "https://images.unsplash.com/photo-1470225620780-dba8ba36b745?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80",
-                    link: "https://www.youtube.com/watch?v=2Vv-BfVoq4g"
+                    title: "Partilhar",
+                    artist: "Rubel",
+                    cover: "https://images.unsplash.com/reserve/Af0sF2OS5S5gatqrKzVP_Silhoutte.jpg?q=80&w=2074&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D",
+                    link: "https://www.youtube.com/watch?v=WkLpoUiasZ8"
                 },
+
+                {
+                    title: "Várias Queixas",
+                    artist: "Gilsons",
+                    cover: "https://images.unsplash.com/photo-1518895949257-7621c3c786d7?q=80&w=2576&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D",
+                    link: "https://www.youtube.com/watch?v=bBHPq3UQFsw"
+                },
+                {
+                    title: "A Thousand Years",
+                    artist: "Christina Perri",
+                    cover: "https://images.unsplash.com/photo-1494232410401-ad00d5433cfa?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80",
+                    link: "https://www.youtube.com/watch?v=rtOvBOTyX00"
+                }
             ],
             
             // Mensagens
