add.embed no vídeo

--- a/index.html
+++ b/index.html
@@ -852,13 +852,18 @@
         </div>
     </section>
 
-    <!-- Vídeo do YouTube -->
-    <section class="video-section container">
-        <h2 class="section-title">Nosso Vídeo Especial</h2>
-        
-        <div class="video-container">
-            <iframe src="https://www.youtube.com/watch?v=WkLpoUiasZ8" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        </div>
+<!-- Vídeo do YouTube -->
+<section class="video-section container">
+    <h2 class="section-title">Nosso Vídeo Especial</h2>
+    
+    <div class="video-container">
+        <iframe src="https://www.youtube.com/embed/WkLpoUiasZ8?autoplay=0&mute=0&controls=1&modestbranding=1&rel=0" 
+                title="Nosso Vídeo Especial - Carlos & Natália" 
+                frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                allowfullscreen></iframe>
+    </div>
+</section>
     </section>
 
     <!-- Playlist do casal-->
