--- a/index.html
+++ b/index.html
@@ -872,7 +872,7 @@
         
         <div class="playlist-grid">
             <div class="song-card">
-                <img src="https://images.unsplash.com/photo-1597848212624-a19eb35e2651?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Capa do álbum" class="song-cover">
+                <img src="https://images.unsplash.com/reserve/Af0sF2OS5S5gatqrKzVP_Silhoutte.jpg?q=80&w=2074&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Capa do álbum" class="song-cover">
                 <div class="song-info">
                     <h3 class="song-title">Partilhar</h3>
                     <p class="song-artist">Rubel</p>
@@ -881,7 +881,7 @@
             </div>
             
             <div class="song-card">
-                <img src="https://images.unsplash.com/photo-1494232410401-ad00d5433cfa?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="Capa do álbum" class="song-cover">
+                <img src="https://images.unsplash.com/photo-1518895949257-7621c3c786d7?q=80&w=2576&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Capa do álbum" class="song-cover">
                 <div class="song-info">
                     <h3 class="song-title">Várias Queixas</h3>
                     <p class="song-artist">Gilsons</p>
