Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -950,7 +950,7 @@
             // Informações do casal
             couple: {
                 name1: "Carlos",
-                name2: "Ntalia",
+                name2: "Natalia",
                 startDate: new Date(2022, 0, 5, 22, 45, 0),
                 photo: "/imagens/foto1_casal.jpg"
             },
